<resources>
    <string name="app_name">Pretty Notes</string>
    <string name="pretty_notes">Pretty Notes</string>
    <string name="forgot_your_login_details_get_help_logging_in">Forgot your login details? Get help logging in.</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in.</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id" translatable="false">YOUR_WEB_CLIENT_ID</string>
    <string name="title">Title</string>
    <string name="start_writing_here">Start writing here...</string>
    <string name="save">Save</string>
    <string name="back_to_home">Back to Home</string>
    <string name="textview">TextView</string>
    <string name="all_notes">All notes</string>
    <string name="create_new_note">Create new note</string>
    <string name="line">Line</string>
    <string name="signout_button">Signout button</string>
</resources>