<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    tools:context=".AddNote">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="@string/back_to_home" />

    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="260dp"
        android:layout_height="0dp"
        android:background="@drawable/note_title_shape"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textColor="@color/text_box_text"
        android:textColorHint="@color/hintColorNote"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        tools:ignore="Autofill,RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        app:srcCompat="@drawable/line"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/noteDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/note_title_shape"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:gravity="start|top"
        android:hint="@string/start_writing_here"
        android:inputType="textMultiLine"
        android:paddingStart="16dp"
        android:textColor="@color/text_box_text"
        android:textColorHint="@color/hintColorNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="Autofill,RtlSymmetry" />

    <TextView
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/save"
        android:textColor="#0092E4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/noteTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/noteTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>