<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:fontFamily="@font/rancho"
        android:text="@string/pretty_notes"
        android:textColor="@color/bg_light"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:textColor="@color/text_box_text"
        android:textColorHint="@color/text_box_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:textColor="@color/text_box_text"
        android:textColorHint="@color/text_box_text"
        app:layout_constraintEnd_toEndOf="@+id/email_login"
        app:layout_constraintStart_toStartOf="@+id/email_login"
        app:layout_constraintTop_toBottomOf="@+id/email_login"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/inter"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#818181"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter"
        android:text="@string/forgot_your_login_details_get_help_logging_in"
        android:textColor="#818181"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/inter_semibold"
        android:text="Login"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/line" />

</androidx.constraintlayout.widget.ConstraintLayout>